[gd_scene load_steps=11 format=3 uid="uid://cwd5k456stmes"]

[ext_resource type="Script" path="res://Components/Player/player.gd" id="1_ej5hw"]
[ext_resource type="Script" path="res://Components/Player/InputController.gd" id="1_kfjew"]
[ext_resource type="Script" path="res://Components/Player/CameraController.gd" id="2_7sfno"]
[ext_resource type="Script" path="res://Components/Player/Bus.gd" id="4_foldq"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="5_7vhg6"]
[ext_resource type="Script" path="res://addons/godot_state_charts/parallel_state.gd" id="6_o474r"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="7_36y70"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="8_n3b7k"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ms13j"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_tkwc4"]

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("bus")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.03592, 0)
script = ExtResource("1_ej5hw")
bus = NodePath("PlayerBus")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_ms13j")

[node name="CSGMesh3D" type="CSGMesh3D" parent="."]
mesh = SubResource("CapsuleMesh_tkwc4")

[node name="InputController" type="Node" parent="."]
script = ExtResource("1_kfjew")
mouse_sensitivity = 30

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.481128, 0)

[node name="CameraController" type="Node" parent="." node_paths=PackedStringArray("camera")]
script = ExtResource("2_7sfno")
camera = NodePath("../Camera3D")

[node name="PlayerBus" type="Node" parent="." node_paths=PackedStringArray("input")]
script = ExtResource("4_foldq")
input = NodePath("../InputController")

[node name="StateChart" type="Node" parent="."]
script = ExtResource("5_7vhg6")

[node name="ParallelState" type="Node" parent="StateChart"]
script = ExtResource("6_o474r")

[node name="CompoundState" type="Node" parent="StateChart/ParallelState"]
script = ExtResource("7_36y70")
initial_state = NodePath("AtomicState")

[node name="AtomicState" type="Node" parent="StateChart/ParallelState/CompoundState"]
script = ExtResource("8_n3b7k")

[node name="AtomicState2" type="Node" parent="StateChart/ParallelState/CompoundState"]
script = ExtResource("8_n3b7k")

[node name="CompoundState2" type="Node" parent="StateChart/ParallelState"]
script = ExtResource("7_36y70")
initial_state = NodePath("AtomicState")

[node name="AtomicState" type="Node" parent="StateChart/ParallelState/CompoundState2"]
script = ExtResource("8_n3b7k")

[node name="AtomicState2" type="Node" parent="StateChart/ParallelState/CompoundState2"]
script = ExtResource("8_n3b7k")

[connection signal="aim_angle_changed" from="InputController" to="PlayerBus" method="_on_aim_angle_changed"]
[connection signal="aim_angle_changed" from="PlayerBus" to="." method="_on_aim_angle_changed"]
[connection signal="aim_angle_changed" from="PlayerBus" to="CameraController" method="_on_aim_angle_changed"]
